# tosfs

./: .gitignore  .pylintrc  .readthedocs.yml  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: test_requet.md
.github/workflows/: ci.yml  ci_hns.yml  codestyle.yml  compatibilitytest.yml  scheduled_workflow.yml  unittest.yml
docs/: Makefile  environment.yml
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/: custom.css
examples/: native.py  tar_streaming_read.py
examples/pytorch/: load_iterate_dateset.py  save_load_checkpoint.py  training.py
examples/ray/: ray_data_demo.py
scripts/: generate_version.sh
source/: conf.py  index.rst
tosfs/: __init__.py  certification.py  compatible.py  consts.py  core.py  exceptions.py  fsspec_utils.py  models.py  mpu.py  retry.py  stability.py  tag.py  utils.py  version.py
tosfs/tests/: conftest.py  test_certification.py  test_fsspec.py  test_fsspec_api.py  test_fsspec_integration.py  test_logging.py  test_retry.py  test_stability.py  test_tag.py  test_tosfs.py  test_utils.py
