[tool.poetry]
name = "tosfs"
version = "0.1.0"
description = "tosfs is a tos Python client that implements the fsspec interface."
authors = ["Your Name <you@example.com>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fsspec = ">=2023.5.0"

[tool.poetry.group.dev.dependencies]
fsspec = ">=2023.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
